--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@popperjs/core": "^2.5.2",
     "angular-popper": "^2.0.1",
+    "apexcharts": "^3.26.0",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "jw-angular-pagination": "^1.2.0",
+    "ng-apexcharts": "^1.5.9",
     "ngx-spinner": "^10.0.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
